fix: correct offscreen slide-in behavior of burger menu on large displays in MenuOverlayComponent

--- a/src/app/overlays/menu-overlay/menu-overlay.component.scss
+++ b/src/app/overlays/menu-overlay/menu-overlay.component.scss
@@ -12,6 +12,7 @@
   @include maxWidth1600();
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 nav {
